Templete/deploy-app/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}-web-service-${STAGE}
spec:
  selector:
    app: ${DEPLOYMENT_NAME}-web-${STAGE}
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
